--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   text-align: center;
   transform: translate(-50%, -50%);
   position: absolute;
-  top: 70%;
+  top: 60%;
   left: 50%;
 }
 
@@ -44,7 +44,7 @@ body {
   padding: 32px;
 }
 
-.ans button {
+/* .ans button {
   margin: 20px;
   padding: 20px;
   width: 450px;
@@ -53,6 +53,35 @@ body {
   background-color: #2d035e;
   font-size: 26px;
   color: white;
+} */
+
+.ans {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  /* border: 2px solid red; */
+}
+
+/* to remove the radio icon*/
+
+/* input[type="radio"]{
+  opacity: 0;
+} */
+
+.option {
+  margin: 20px;
+  padding: 20px;
+  width: 450px;
+  border-radius: 40px;
+  cursor: pointer;
+  background-color: #2d035e;
+  font-size: 26px;
+  color: white;
+}
+
+.option:active {
+  border: 2px solid red;
 }
 
 .lifelines {
@@ -98,4 +127,19 @@ body {
   border-radius: 150px 150px 0 0;
   background-color: #2d035e;
   font-size: 50px;
+}
+
+#confirm {
+  position: absolute;
+  top: 112%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin: 20px;
+  padding: 20px;
+  width: 450px;
+  border-radius: 40px;
+  cursor: pointer;
+  background-color: #2d035e;
+  font-size: 26px;
+  color: white;
 }
