--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
   background-color: black;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  /* background-image: url("./bg.jpg"); */
 }
 
 .win {
@@ -119,7 +120,7 @@ body {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 36%;
+  top: 32%;
   left: 50%;
   transform: translate(-50%, -50%);
   height: 100px;
