--- a/css/style.css
+++ b/css/style.css
@@ -38,7 +38,7 @@ h1 {
   text-align: center;
   transform: translate(-50%, -50%);
   position: absolute;
-  top: 60%;
+  top: 67%;
   left: 50%;
 }
 
@@ -48,22 +48,21 @@ h1 {
   width: 1400px;
   text-align: center;
   border-radius: 64px;
-  padding: 32px;
+  padding: 22px;
 }
 
 .ans {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center; 
+  align-items: center;
 }
-
 
 .option {
   margin: 20px;
-  padding: 20px;
-  width: 450px;
-  border-radius: 40px;
+  padding: 15px;
+  width: 500px;
+  border-radius: 30px;
   cursor: pointer;
   background-color: #2d035e;
   font-size: 26px;
@@ -109,27 +108,95 @@ h1 {
   justify-content: center;
   align-items: center;
   position: absolute;
-  top: 32%;
-  left: 50%;
+  top: 26%;
+  left: 15%;
   transform: translate(-50%, -50%);
   height: 100px;
-  width: 200px;
-  border-radius: 150px 150px 0 0;
+  width: 100px;
+  border-radius: 50%;
   background-color: #2d035e;
-  font-size: 50px;
+  font-size: 35px;
 }
 
 #confirm {
   position: absolute;
-  top: 112%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  margin: 20px;
-  padding: 20px;
+  top: 100%;
+  left: 41%;
+  margin: 15px;
+  padding: 10px;
   width: 200px;
-  border-radius: 40px;
+  border-radius: 20px;
   cursor: pointer;
   background-color: #2d035e;
   font-size: 26px;
   color: white;
+  border: none;
+}
+
+.loading {
+  height: 400px;
+  width: 600px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
+/* From uiverse.io by @adamgiebl */
+.cssbuttons-io-button {
+  background: #a370f0;
+  color: white;
+  font-family: inherit;
+  padding: 0.55em;
+  padding-left: 1.2em;
+  font-size: 17px;
+  font-weight: 500;
+  border-radius: 0.9em;
+  border: none;
+  letter-spacing: 0.05em;
+  display: flex;
+  align-items: center;
+  box-shadow: inset 0 0 1.6em -0.6em #714da6;
+  overflow: hidden;
+  position: relative;
+  height: 2.8em;
+  padding-right: 3.3em;
+}
+
+.cssbuttons-io-button .icon {
+  background: white;
+  margin-left: 1em;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.2em;
+  width: 2.2em;
+  border-radius: 0.7em;
+  box-shadow: 0.1em 0.1em 0.6em 0.2em #7b52b9;
+  right: 0.3em;
+  transition: all 0.3s;
+}
+
+.cssbuttons-io-button:hover .icon {
+  width: calc(100% - 0.6em);
+}
+
+.cssbuttons-io-button .icon svg {
+  width: 1.1em;
+  transition: transform 0.3s;
+  color: #7b52b9;
+}
+
+.cssbuttons-io-button:hover .icon svg {
+  transform: translateX(0.1em);
+}
+
+.cssbuttons-io-button:active .icon {
+  transform: scale(0.95);
 }
