--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu&display=swap");
+
 * {
   padding: 0;
   margin: 0;
@@ -5,13 +8,23 @@
 }
 
 body {
+  background-image: linear-gradient(to right, #434343 0%, black 100%);
   background-color: black;
-  font-family: Arial, Helvetica, sans-serif;
   color: white;
+  font-family: 'Ubuntu', sans-serif;
 }
 
 h1 {
-  color: #fff;
+  color: #5A20CB;
+  text-align: center;
+  margin-top: 50px;
+  font-size: 60px;
+  font-family: 'Poppins',sans-serif;
+}
+
+
+h2{
+  color: #E83A59;
   text-align: center;
   margin-top: 50px;
   font-size: 50px;
@@ -145,7 +158,6 @@ h1 {
   left: 50%;
   transform: translate(-50%, -50%);
 }
-
 
 /* From uiverse.io by @adamgiebl */
 .cssbuttons-io-button {
